ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Critical - P2
    • 3.0.6, 3.1.7
    • Affects Version/s: 2.4.9, 3.0.5, 3.1.6
    • Component/s: GridFS, Replication
    • Fully Compatible
    • ALL
    • Hide

      Run cloneCollection from a remote gridfs chunks collection

      Show
      Run cloneCollection from a remote gridfs chunks collection
    • RPL 7 08/10/15
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The following error started to occur right after we started deploying with the new v 3.0.5:

      2015-07-29T10:57:50.272+0300 I COMMAND  [conn353] cloneCollection.  db:my_coll collection:my_coll.fs.chunks from: remote_ip:27017 query: { _id: { $in: [ ObjectId('55b886f90429ea0918c63f8a') ] } } 
      2015-07-29T10:57:50.275+0300 F -        [conn353] Invalid access at address: 0xd8
      2015-07-29T10:57:50.761+0300 F -        [conn353] Got signal: 11 (Segmentation fault).
      
       0xf5ba59 0xf5b322 0xf5b67e 0x7f9e352f4340 0x922b9a 0x922cb6 0x911769 0x939bf2 0x85801d 0x934fa8 0x936a92 0x949266 0x9d5f64 0x9d6eed 0x9d7bfb 0xb9c776 0xab2b50 0x80e06d 0xf0e9fb 0x7f9e352ec182 0x7f9e33db500d
      ----- BEGIN BACKTRACE -----
      {"backtrace":[{"b":"400000","o":"B5BA59"},{"b":"400000","o":"B5B322"},{"b":"400000","o":"B5B67E"},{"b":"7F9E352E4000","o":"10340"},{"b":"400000","o":"522B9A"},{"b":"400000","o":"522CB6"},{"b":"400000","o":"511769"},{"b":"400000","o":"539BF2"},{"b":"400000","o":"45801D"},{"b":"400000","o":"534FA8"},{"b":"400000","o":"536A92"},{"b":"400000","o":"549266"},{"b":"400000","o":"5D5F64"},{"b":"400000","o":"5D6EED"},{"b":"400000","o":"5D7BFB"},{"b":"400000","o":"79C776"},{"b":"400000","o":"6B2B50"},{"b":"400000","o":"40E06D"},{"b":"400000","o":"B0E9FB"},{"b":"7F9E352E4000","o":"8182"},{"b":"7F9E33CBA000","o":"FB00D"}],"processInfo":{ "mongodbVersion" : "3.0.5", "gitVersion" : "8bc4ae20708dbb493cb09338d9e7be6698e4a3a3", "uname" : { "sysname" : "Linux", "release" : "3.13.0-24-generic", "version" : "#46-Ubuntu SMP Thu Apr 10 19:11:08 UTC 2014", "machine" : "x86_64" }, "somap" : [ { "elfType" : 2, "b" : "400000", "buildId" : "695FC6828398A9DB1F99718671147885B5ED116D" }, { "b" : "7FFFD8AFE000", "elfType" : 3, "buildId" : "6755FAD2CADACDF1667E5B57FF1EDFC28DD1C976" }, { "b" : "7F9E352E4000", "path" : "/lib/x86_64-linux-gnu/libpthread.so.0", "elfType" : 3, "buildId" : "9318E8AF0BFBE444731BB0461202EF57F7C39542" }, { "b" : "7F9E35086000", "path" : "/lib/x86_64-linux-gnu/libssl.so.1.0.0", "elfType" : 3, "buildId" : "70F9A7F3734C01FF8D442C21A03B631588C2FECD" }, { "b" : "7F9E34CAC000", "path" : "/lib/x86_64-linux-gnu/libcrypto.so.1.0.0", "elfType" : 3, "buildId" : "8D6FFA819931E68666BCEF4424BA6289838309D7" }, { "b" : "7F9E34AA4000", "path" : "/lib/x86_64-linux-gnu/librt.so.1", "elfType" : 3, "buildId" : "92FCF41EFE012D6186E31A59AD05BDBB487769AB" }, { "b" : "7F9E348A0000", "path" : "/lib/x86_64-linux-gnu/libdl.so.2", "elfType" : 3, "buildId" : "C1AE4CB7195D337A77A3C689051DABAA3980CA0C" }, { "b" : "7F9E3459C000", "path" : "/usr/lib/x86_64-linux-gnu/libstdc++.so.6", "elfType" : 3, "buildId" : "19EFDDAB11B3BF5C71570078C59F91CF6592CE9E" }, { "b" : "7F9E34296000", "path" : "/lib/x86_64-linux-gnu/libm.so.6", "elfType" : 3, "buildId" : "1D76B71E905CB867B27CEF230FCB20F01A3178F5" }, { "b" : "7F9E34080000", "path" : "/lib/x86_64-linux-gnu/libgcc_s.so.1", "elfType" : 3, "buildId" : "CC0D578C2E0D86237CA7B0CE8913261C506A629A" }, { "b" : "7F9E33CBA000", "path" : "/lib/x86_64-linux-gnu/libc.so.6", "elfType" : 3, "buildId" : "882AD7AAD54790E2FA6EF64CA2E6188F06BF9207" }, { "b" : "7F9E35502000", "path" : "/lib64/ld-linux-x86-64.so.2", "elfType" : 3, "buildId" : "9F00581AB3C73E3AEA35995A0C50D24D59A01D47" } ] }}
       mongod(_ZN5mongo15printStackTraceERSo+0x29) [0xf5ba59]
       mongod(+0xB5B322) [0xf5b322]
       mongod(+0xB5B67E) [0xf5b67e]
       libpthread.so.0(+0x10340) [0x7f9e352f4340]
       mongod(_ZN5mongo12IndexCatalog13IndexIteratorC1EPNS_16OperationContextEPKS0_b+0xA) [0x922b9a]
       mongod(_ZNK5mongo12IndexCatalog11findIdIndexEPNS_16OperationContextE+0x16) [0x922cb6]
       mongod(_ZN5mongo10Collection14insertDocumentEPNS_16OperationContextERKNS_7BSONObjEb+0x49) [0x911769]
       mongod(_ZN5mongo6Cloner3FunclERNS_27DBClientCursorBatchIteratorE+0x262) [0x939bf2]
       mongod(_ZN5mongo18DBClientConnection5queryESt8functionIFvRNS_27DBClientCursorBatchIteratorEEERKSsNS_5QueryEPKNS_7BSONObjEi+0x1AD) [0x85801d]
       mongod(_ZN5mongo6Cloner4copyEPNS_16OperationContextERKSsRKNS_15NamespaceStringERKNS_7BSONObjES7_bbbbbNS_5QueryE+0x5C8) [0x934fa8]
       mongod(_ZN5mongo6Cloner14copyCollectionEPNS_16OperationContextERKSsRKNS_7BSONObjERSsbbbb+0x652) [0x936a92]
       mongod(_ZN5mongo18CmdCloneCollection3runEPNS_16OperationContextERKSsRNS_7BSONObjEiRSsRNS_14BSONObjBuilderEb+0x546) [0x949266]
       mongod(_ZN5mongo12_execCommandEPNS_16OperationContextEPNS_7CommandERKSsRNS_7BSONObjEiRSsRNS_14BSONObjBuilderEb+0x34) [0x9d5f64]
       mongod(_ZN5mongo7Command11execCommandEPNS_16OperationContextEPS0_iPKcRNS_7BSONObjERNS_14BSONObjBuilderEb+0xC1D) [0x9d6eed]
       mongod(_ZN5mongo12_runCommandsEPNS_16OperationContextEPKcRNS_7BSONObjERNS_11_BufBuilderINS_16TrivialAllocatorEEERNS_14BSONObjBuilderEbi+0x28B) [0x9d7bfb]
       mongod(_ZN5mongo8runQueryEPNS_16OperationContextERNS_7MessageERNS_12QueryMessageERKNS_15NamespaceStringERNS_5CurOpES3_+0x746) [0xb9c776]
       mongod(_ZN5mongo16assembleResponseEPNS_16OperationContextERNS_7MessageERNS_10DbResponseERKNS_11HostAndPortE+0xB10) [0xab2b50]
       mongod(_ZN5mongo16MyMessageHandler7processERNS_7MessageEPNS_21AbstractMessagingPortEPNS_9LastErrorE+0xDD) [0x80e06d]
       mongod(_ZN5mongo17PortMessageServer17handleIncomingMsgEPv+0x34B) [0xf0e9fb]
       libpthread.so.0(+0x8182) [0x7f9e352ec182]
       libc.so.6(clone+0x6D) [0x7f9e33db500d]
      -----  END BACKTRACE  -----
      

      It replicates every time ever since.

            Assignee:
            Scott Hernandez (Inactive)
            Reporter:
            Amit Lichtenberg
            Votes:
            1 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: