SERVER-19644: ensure valid collection creation when there are no collection options

(cherry picked from commit 66abb09a28b2d9ec6955f454b7ff86824ebc56c1)